# rancher-helm-mcp

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  ai-agent-config.yaml
.github/workflows/: build.yaml
charts/rancher-helm-mcp/: Chart.yaml  values.yaml
charts/rancher-helm-mcp/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/: k8s.rs  main.rs  rancher.rs  server.rs
