[package]
name = "rancher-helm-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rancher-helm-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tokio-util = "0.7"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
kube = { version = "0.99", features = ["client"] }
k8s-openapi = { version = "0.24", features = ["v1_30"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
